erDiagram
    empresa_gestao ||--o{ condominio : "gere"
    empresa_gestao ||--o{ utilizador : "emprega"
    condominio   ||--o{ edificio   : "tem"
    condominio   ||--o{ fracao     : "tem"
    condominio   ||--o{ reuniao    : "realiza"
    condominio   ||--o{ documento  : "arquiva"
    condominio   ||--o{ despesa    : "regista"
    condominio   ||--o{ ocorrencia : "regista"
    edificio     ||--o{ fracao     : "contem"
    fracao       ||--o{ quota      : "gera"
    fracao       ||--o{ condomino  : "alberga"
    quota        ||--o{ pagamento  : "liquidada por"
    reuniao      ||--o{ ata        : "produz"
    reuniao      ||--o{ votacao    : "inclui"
    votacao      ||--o{ voto       : "recebe"
    condomino    ||--o{ voto       : "emite"
    condomino    ||--o{ ocorrencia : "reporta"
    utilizador   ||--o{ mensagem   : "envia (origem)"
    utilizador   ||--o{ mensagem   : "recebe (destino)"
    utilizador   ||--o{ utilizador_perfil : "possui"
    perfil       ||--o{ utilizador_perfil : "atribuido a"
